# QKDPostProcessing

./: .env  .gitignore  API.py  CMakeLists.txt  Client.cpp  Client.h  DEMO.py  README.md  RUN.py  RUN_TESTS.py  RabbitmqClassicalSession.cpp  RabbitmqClassicalSession.h  Receiver.cpp  Receiver.h  Results  Sender.cpp  Sender.h  Server.cpp  Server.h  algorithm.h  block.cpp  block.h  classical_session.cpp  classical_session.h  client_dockerfile  docker-compose.yml  frontend.py  install.sh  iteration.cpp  iteration.h  key.cpp  key.h  main.cpp  mock_classical_session.cpp  mock_classical_session.h  original_1000000_0.600000.json  original_100000_0.600000.json  original_10000_0.600000.json  pending_item.cpp  pending_item.h  (+10 more)
ErrorCorrection/: .env  CMakeLists.txt  Client.cpp  Client.h  README.md  RabbitmqClassicalSession.cpp  RabbitmqClassicalSession.h  Server.cpp  Server.h  algorithm.cpp  classical_session.cpp  classical_session.h  conn_handler.h  data_point.cpp  data_point.h  debug.h  iteration.h  key.cpp  key.h  main.cpp  mock_classical_session.cpp  mock_classical_session.h  shuffle.h  shuffled_key.cpp  stats.cpp  stats.h
PrivacyAmplification/: ClassicalSession.h  Key.cpp  Random.cpp  Server.h  Tests.py  client.py  server.py  wrapper.py
PrivacyAmplification/PrivacyAmplificationCPP/: CellularAutomataPA.cpp  CellularAutomataPA.h  ClassicalSession.cpp  Client.cpp  ConnHandler.h  Key.cpp  Key.h  RabbitmqClassicalSession.cpp  RabbitmqClassicalSession.h  main.cpp
ResultsDEMO/: original_1024_0.010000.json  original_128_0.010000.json
error_correction/: CMakeLists.txt  RabbitmqClassicalSession.h  Server.h  classical_session.h  data_point.cpp  data_point.h  debug.cpp  iteration.cpp  mock_classical_session.h  shuffle.cpp  shuffled_key.h  stats.cpp
privacy_amplification/: CMakeLists.txt  Client.h  Random.h  Server.cpp
templates/: index.html
